增加更多气体组件

--- a/src/main/resources/assets/mekeng/lang/en_us.lang
+++ b/src/main/resources/assets/mekeng/lang/en_us.lang
@@ -6,10 +6,26 @@ item.mekeng:gas_core_1k.name=§61k§r ME Gas Storage Component
 item.mekeng:gas_core_4k.name=§e4k§r ME Gas Storage Component
 item.mekeng:gas_core_16k.name=§a16k§r ME Gas Storage Component
 item.mekeng:gas_core_64k.name=§b64k§r ME Gas Storage Component
+item.mekeng:gas_core_256k.name=§3256k§r ME Gas Storage Component
+item.mekeng:gas_core_1m.name=§91m§r ME Gas Storage Component
+item.mekeng:gas_core_4m.name=§b4m§r ME Gas Storage Component
+item.mekeng:gas_core_16m.name=§516m§r ME Gas Storage Component
+item.mekeng:gas_core_64m.name=§d64m§r ME Gas Storage Component
+item.mekeng:gas_core_256m.name=§a256m§r ME Gas Storage Component
+item.mekeng:gas_core_1g.name=§61g§r ME Gas Storage Component
+item.mekeng:gas_core_2g.name=§e2g§r ME Gas Storage Component
 item.mekeng:gas_cell_1k.name=§61k§r ME Gas Storage Cell
 item.mekeng:gas_cell_4k.name=§e4k§r ME Gas Storage Cell
 item.mekeng:gas_cell_16k.name=§a16k§r ME Gas Storage Cell
 item.mekeng:gas_cell_64k.name=§b64k§r ME Gas Storage Cell
+item.mekeng:gas_cell_256k.name=§3256k§r ME Gas Storage Cell
+item.mekeng:gas_cell_1m.name=§91m§r ME Gas Storage Cell
+item.mekeng:gas_cell_4m.name=§b4m§r ME Gas Storage Cell
+item.mekeng:gas_cell_16m.name=§516m§r ME Gas Storage Cell
+item.mekeng:gas_cell_64m.name=§d64m§r ME Gas Storage Cell
+item.mekeng:gas_cell_256m.name=§a256m§r ME Gas Storage Cell
+item.mekeng:gas_cell_1g.name=§61g§r ME Gas Storage Cell
+item.mekeng:gas_cell_2g.name=§e2g§r ME Gas Storage Cell
 item.mekeng:portable_gas_cell.name=Portable Gas Cell
 item.mekeng:gas_terminal.name=ME Gas Terminal
 item.mekeng:gas_import_bus.name=ME Gas Import Bus
