--- a/src/main/resources/assets/mekeng/lang/zh_cn.lang
+++ b/src/main/resources/assets/mekeng/lang/zh_cn.lang
@@ -4,10 +4,26 @@ item.mekeng:gas_core_1k.name=§61k§r-ME气体存储组件
 item.mekeng:gas_core_4k.name=§e4k§r-ME气体存储组件
 item.mekeng:gas_core_16k.name=§a16k§r-ME气体存储组件
 item.mekeng:gas_core_64k.name=§b64k§r-ME气体存储组件
+item.mekeng:gas_core_256k.name=§3256k§r-ME气体存储组件
+item.mekeng:gas_core_1m.name=§91MB§r-ME气体存储组件
+item.mekeng:gas_core_4m.name=§b4MB§r-ME气体存储组件
+item.mekeng:gas_core_16m.name=§516MB§r-ME气体存储组件
+item.mekeng:gas_core_64m.name=§d64MB§r-ME气体存储组件
+item.mekeng:gas_core_256m.name=§a256MB§r-ME气体存储组件
+item.mekeng:gas_core_1g.name=§61GB§r-ME气体存储组件
+item.mekeng:gas_core_2g.name=§e2GB§r-ME气体存储组件
 item.mekeng:gas_cell_1k.name=§61k§r-ME气体存储元件
 item.mekeng:gas_cell_4k.name=§e4k§r-ME气体存储元件
 item.mekeng:gas_cell_16k.name=§a16k§r-ME气体存储元件
 item.mekeng:gas_cell_64k.name=§b64k§r-ME气体存储元件
+item.mekeng:gas_cell_256k.name=§3256k§r-ME气体存储元件
+item.mekeng:gas_cell_1m.name=§91MB§r-ME气体存储元件
+item.mekeng:gas_cell_4m.name=§b4MB§r-ME气体存储元件
+item.mekeng:gas_cell_16m.name=§516MB§r-ME气体存储元件
+item.mekeng:gas_cell_64m.name=§d64MB§r-ME气体存储元件
+item.mekeng:gas_cell_256m.name=§a256MB§r-ME气体存储元件
+item.mekeng:gas_cell_1g.name=§61GB§r-ME气体存储元件
+item.mekeng:gas_cell_2g.name=§e2GB§r-ME气体存储元件
 item.mekeng:portable_gas_cell.name=便携式气体存储元件
 item.mekeng:gas_terminal.name=ME气体终端
 item.mekeng:gas_import_bus.name=ME气体输入总线
